cabal-version:      2.4
name:               duktape-typescript-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brandon Simmons
maintainer:         brandon.m.simmons@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable duktape-typescript-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      aeson <=1.5.6.0,
                      text,
                      bytestring,
                      hs-duktape,
    hs-source-dirs:   app
    default-language: Haskell2010
